fdo#78332: sw: fix separators in SwDDEFieldType::PutValue()

Setting 3 separators instead of 2 does not work.

(regression from 263153842741d7ce21cc0bf1c5296a55a1138024)

Change-Id: Id0b4649404b8a49a7f89a237c46106bce4e146ff